# ChatService

./: CMakeLists.txt  ChatServer.cpp  ChatServer.h  ChatService.cpp  ChatService.sln  ChatService.vcxproj  ChatService.vcxproj.filters  Client.cpp  Launcher.cpp  MultiThreadServer.cpp  README.md  Server.cpp  SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h  stdafx.h
include/: EasyWay.h  EventProcessor.h  SocketClient.h  SocketServer.h  UserAgent.h  constant.h  socketUtil.h  unixbase.h
old/: ChatService.cpp  Client.cpp  MultiThreadServer.cpp  Server.cpp  resource.h
old/tobe_deleted/: ChatClient.h  ChatServer.cpp  chatProtocol.h
resources/: mdDemo.md  readme.md
src/: ChatClient.cpp  ChatClient.h  ChatServer.cpp  ChatServer.h  EasyWay.h  EventProcessor.h  Launcher.cpp  SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h  UserAgent.cpp  UserAgent.h  chatProtocol.h  constant.h  socketUtil.cpp  stdafx.cpp  stdafx.h
